tdf#149115 Trim the white sapce in title before emptiness check

Title that only contains white space should be treated as empty.

Change-Id: I7e4ec6aed206e01dd62fb3afc278fa90d84b7598
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138268
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>